@@ -14,7 +14,7 @@ that is supporting remote calls.
 Requirements
 ------------
 
-For compiling the plugin yourself, you will need the GTK (>= 2.6.0)
+For compiling the plugin yourself, you will need the GTK (>= 2.8.0)
 libraries and header files. You will also need its dependency
 libraries and header files, such as Pango, Glib and ATK. All these
 files are available at http://www.gtk.org.
@@ -24,7 +24,7 @@ installed from the sources, you should be ready to go. If you used a
 prepared package e.g. from your distribution you probably need to
 install an additional package, this might be called geany-dev or
 geany-devel. Please note that in order to compile and use this plugin,
-you need Geany 0.16 or later (Geany Plugin API v116 or higher).
+you need Geany 0.18 or later (Geany Plugin API v147 or higher).
 
 Furthermore you need, of course, a C compiler and the Make tool. The
 GNU versions of these tools are recommended.
