@@ -14,7 +14,7 @@ LIBTOOL="$LIBTOOL --silent"
 AC_PROG_INSTALL
 
 # checking for Geany
-PKG_CHECK_MODULES(GEANY, [geany >= 0.16])
+PKG_CHECK_MODULES(GEANY, [geany >= 0.18])
 AC_SUBST(GTK_CFLAGS)
 AC_SUBST(GTK_LIBS)
 
