@@ -1,3 +1,8 @@
+2009-07-18  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>
+
+ * Update to Geany plugin API v147 and make usage of single header includes.
+
+
 2009-05-28  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>
 
  * Make usage of Geany's ui_widget_set_tooltip_text() function.
